--- a/action.yaml
+++ b/action.yaml
@@ -7,6 +7,7 @@ inputs:
     required: true
     default: 'World'
 outputs:
+  docker-test: "hello from docker"
   time: # id of output
     description: 'The time we greeted you'
 runs:
